fix bunch of issues with indy-build lib-build and release (#32)