@@ -19,12 +19,14 @@ pipeline {
           imagePullPolicy: Always
           tty: true
           env:
+          - name: JAVA_HOME:
+            value: /usr/lib/jvm/java-11-openjdk
           - name: USER
             value: 'jenkins-k8s-config'
           - name: HOME
             value: /home/jenkins
           - name: JAVA_TOOL_OPTIONS
-            value: '-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dsun.zip.disableMemoryMapping=true -Xms1024m -Xmx4g'
+            value: '-XX:+UnlockExperimentalVMOptions -Dsun.zip.disableMemoryMapping=true -Xms1024m -Xmx4g'
           - name: MAVEN_OPTS
             value: -Xmx6g -Xms1024m -XX:MaxPermSize=512m -Xss8m
           resources:
